# MERCpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
merc/: __init__.py  run_process.py
merc.egg-info/: PKG-INFO  SOURCES.txt
merc/tests/: test.py
